--- a/data/20200715/Three/03_model/index.html
+++ b/data/20200715/Three/03_model/index.html
@@ -13,6 +13,7 @@
 		<!--<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>-->
 		<script src="js/GLTFLoader.js"></script>
 		<script src="js/OBJLoader.js"></script>
+		<script src="js/MTLLoader.js"></script>
 		<script src="js/OrbitControls.js"></script>
 
 		<script src="main.js"></script>
