--- a/data/20200728/05_webxr/index.html
+++ b/data/20200728/05_webxr/index.html
@@ -12,6 +12,6 @@
 	<body>
 		<script src="js/three.min.js"></script>
 		<script src="js/OrbitControls.js"></script>
-		<script src="main.js"></script>
+		<script type="module"  src="main.js"></script>
  	</body>
 </html>
